--- a/RPG_Game.Infrastructure/RPG_Game.Infrastructure.csproj
+++ b/RPG_Game.Infrastructure/RPG_Game.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.16.1" />
   </ItemGroup>
 
