Divide solution into directories src, tests

--- a/tests/RPG_Game.IntegrationTests/RPG_Game.IntegrationTests.csproj
+++ b/tests/RPG_Game.IntegrationTests/RPG_Game.IntegrationTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RPG_Game.Infrastructure\RPG_Game.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\RPG_Game.Infrastructure\RPG_Game.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
