--- a/tests/RPG_GAME.Tests/RPG_GAME.Tests.csproj
+++ b/tests/RPG_GAME.Tests/RPG_GAME.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RPG_GAME.Service\RPG_GAME.Service.csproj" />
+    <ProjectReference Include="..\..\src\RPG_GAME.Service\RPG_GAME.Service.csproj" />
   </ItemGroup>
 
 </Project>
