--- a/src/RPG_GAME.Infrastructure/RPG_GAME.Infrastructure.csproj
+++ b/src/RPG_GAME.Infrastructure/RPG_GAME.Infrastructure.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 	
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.16.1" />
