--- a/src/RPG_GAME.Infrastructure/RPG_GAME.Infrastructure.csproj
+++ b/src/RPG_GAME.Infrastructure/RPG_GAME.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.16.1" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
+    <PackageReference Include="Scrutor" Version="4.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 	
