RPG_GAME - UnitTests, Application, Infrastructure
Added update method to userRepo
Added tests to identityService
Added tests identityService flow
Added stubs for testing

--- a/tests/RPG_GAME.UnitTests/RPG_GAME.UnitTests.csproj
+++ b/tests/RPG_GAME.UnitTests/RPG_GAME.UnitTests.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
+	<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.7" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
@@ -22,11 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\RPG_GAME.Application\RPG_GAME.Application.csproj" />
     <ProjectReference Include="..\..\src\RPG_GAME.Service\RPG_GAME.Service.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
