RPG_GAME - Infrastructure
Added gRPC
Added Map property to Battle

--- a/src/RPG_GAME.Infrastructure/RPG_GAME.Infrastructure.csproj
+++ b/src/RPG_GAME.Infrastructure/RPG_GAME.Infrastructure.csproj
@@ -4,8 +4,17 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+	<Protobuf Include="Grpc\Protos\battle.proto" GrpcServices="Server" />
+  </ItemGroup>
 	
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.47.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.48.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
