RPG_GAME - Commands, Queries
Added Commands and Queries

--- a/src/RPG_GAME.Application/RPG_GAME.Application.csproj
+++ b/src/RPG_GAME.Application/RPG_GAME.Application.csproj
@@ -12,5 +12,11 @@
   <ItemGroup>
     <ProjectReference Include="..\RPG_GAME.Core\RPG_GAME.Core.csproj" />
   </ItemGroup>
+		
+  <ItemGroup>
+    <Folder Include="Commands\Battles\Handlers\" />
+    <Folder Include="Queries\Battles\" />
+    <Folder Include="Queries\Battles\Handlers\" />
+  </ItemGroup>
 
 </Project>
