--- a/src/RPG_GAME.Api/appsettings.Development.json
+++ b/src/RPG_GAME.Api/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "gRPC": {
+        "Url": "http://localhost:50000",
+        "Protocols": "Http2"
+      },
+      "Http": {
+        "Url": "http://localhost:5000"
+      }
+    }
   }
 }
