--- a/src/RPG_GAME/RPG_GAME.csproj
+++ b/src/RPG_GAME/RPG_GAME.csproj
@@ -9,4 +9,17 @@
     <ProjectReference Include="..\RPG_GAME.Service\RPG_GAME.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+	<PackageReference Include="Google.Protobuf" Version="3.21.5" />
+	<PackageReference Include="Grpc.Net.Client" Version="2.47.0" />
+	<PackageReference Include="Grpc.Tools" Version="2.48.0">
+		<PrivateAssets>all</PrivateAssets>
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\battle.proto" GrpcServices="Client" />
+  </ItemGroup>
+
 </Project>
