RPG_GAME - Api, IntegrationTests
Added first integration test which comunicate using gRPC

--- a/src/RPG_GAME.Api/RPG_GAME.Api.csproj
+++ b/src/RPG_GAME.Api/RPG_GAME.Api.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RPG_GAME.Infrastructure\RPG_Game.Infrastructure.csproj" />
+    <ProjectReference Include="..\RPG_GAME.Infrastructure\RPG_GAME.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
