--- a/tests/RPG_GAME.IntegrationTests/RPG_GAME.IntegrationTests.csproj
+++ b/tests/RPG_GAME.IntegrationTests/RPG_GAME.IntegrationTests.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Flurl.Http" Version="3.2.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
@@ -32,10 +33,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\RPG_GAME.Api\RPG_GAME.Api.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Api\" />
   </ItemGroup>
 
   <ItemGroup>
