--- a/src/RPG_GAME.UI/package.json
+++ b/src/RPG_GAME.UI/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.0.0",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
