RPG_GAME - UI, Api
First tests connection with gRPC Api
Next steps: check how to work with only HTTP2, Add token in request header, try to check if other way can be better to implement setup gRPC for backend

--- a/src/RPG_GAME.Api/appsettings.development.json
+++ b/src/RPG_GAME.Api/appsettings.development.json
@@ -9,7 +9,7 @@
     "Endpoints": {
       "gRPC": {
         "Url": "http://localhost:50000",
-        "Protocols": "Http2"
+        "Protocols": "Http1AndHttp2"
       },
       "Http": {
         "Url": "http://localhost:5000"
