--- a/src/RPG_GAME.Infrastructure/RPG_GAME.Infrastructure.csproj
+++ b/src/RPG_GAME.Infrastructure/RPG_GAME.Infrastructure.csproj
@@ -11,6 +11,7 @@
 	
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.47.0" />
+    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.49.0" />
     <PackageReference Include="Grpc.Tools" Version="2.48.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
