--- a/src/RPG_GAME.UI/package.json
+++ b/src/RPG_GAME.UI/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.0.0",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
     "jwt-decode": "^3.1.2",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
